# Orpheus-FastAPI

./: .env.example  .gitignore  Dockerfile  Dockerfile.cpu  Makefile  README.md  app.py  copypasta  docker-compose-cpu.yaml  docker-compose.yaml  infer.py  main.py  pyproject.toml  requirements.txt  test_infer.py  test_local_infer.py
.github/workflows/: docker-build-and-push.yaml
templates/: tts.html
tts_engine/: constants.py  inference.py  log.py  speechpipe.py  string_utils.py
